--- a/styles/style.css
+++ b/styles/style.css
@@ -15,20 +15,190 @@ body{
 
 header{
     
-    width: 90%;
+    max-width: 84%;
+    height:calc(100vh - 167px);
     margin: auto;
+   
 }
-
-
 
 /* global styles end*/
 
 
-/* header styles start */
+/* nav start */
 nav{
     margin-top: 87px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 87px;
+}
+
+nav > .logo > h2{
+    font-size: 28px;
+    font-weight:700 ;
+    color: #3A3A3A;
+}
+
+nav > .navigations-manu{
+    height: 36px;
+    display: flex;
+    align-items: center;
+}
+
+nav > .navigations-manu > .navigation{
+    display: flex;
 }
 
 
-/* header styles end */
+nav > .navigations-manu > .navigation li{
+    list-style: none;
+    margin-right:34px;
+}
+
+nav > .navigations-manu > .navigation > li > a,
+nav > .navigations-manu > .cart > a{
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #3A3A3A;
+    padding: 5px;
+}
+
+nav > .navigations-manu > .navigation > li > a > .menu-icon,
+nav > .navigations-manu > .cart > a > .menu-icon{
+    font-size: 28px;
+    color:#000000 ;
+}
+/* nav end */
+
+
+/* top banner section start */
+.section{
+    margin-top: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left-content{
+    max-width: 45%;
+}
+
+.left-content h1{
+    font-size: 52px;
+    font-weight: 700;
+    color: #3A3A3A;
+    visibility: hidden;
+    animation: movedown 1s linear 0.4s   forwards;
+}
+
+@keyframes movedown{
+    0%{
+        transform: translateY(-130px) ;
+        visibility: visible;
+    }
+
+    100%{
+        transform: translateY(0px) scale(1.0);
+        visibility: visible;
+    }
+}
+
+.left-content p{
+    font-size: 18px;
+    color: #3A3A3A;
+    font-weight:  600;
+    margin-top: 16px;
+}
+
+.left-content > .button{
+    margin-top: 44px;
+}
+
+.left-content > .button > a{
+    padding: 14px 40px;
+    background-color: #E02C6D;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+    border-radius: 40px;
+} 
+
+.left-content > .button > a > i{
+    margin-left: 8px;
+}
+
+.right-image{
+    height: 500px;
+    max-width: 45%;
+    background-size:100%;
+    background-repeat: no-repeat;
+    background-image: url(./images/Circle\ design.svg);
+}
+
+.right-image img{
+    width: 500px;
+}
+/* top banner section end */
+
+
+
+
+/* conpnay section style start */
+.company{
+    max-width: 1110px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 110px;
+    margin:100px auto;
+    border-bottom: 2px solid;
+    border-top: 2px solid;
+    border-image: linear-gradient(85deg, white, rgb(207, 206, 204) , white);
+    border-image-slice: 1;
+}
+
+.left-side{
+    width: 56%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.left-side img{
+    width: 100px;
+}
+
+.right-side{
+    width: 38%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.right-side img{
+    width: 100px;
+}
+/* conpnay section style end */
+
+
+/* product-card style start */
+.product-card{
+    max-width: 1047px;
+    margin: auto;
+}
+
+.product-card > h1{
+    font-size: 28px;
+    font-weight: 600;
+    color: #3A3A3A;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+
+/* product-card style end */
+
+
 
