--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 /* import google font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@400;500&display=swap');
 
-
 /* global styles start*/
 *{
     margin: 0;
@@ -14,11 +13,16 @@ body{
 }
 
 header{
-    
     max-width: 84%;
-    height:calc(100vh - 167px);
     margin: auto;
-   
+}
+
+.border{
+    border-bottom: 4px solid rgb(243, 119, 119);
+}
+
+.orange{
+    color: orange;
 }
 
 /* global styles end*/
@@ -31,6 +35,15 @@ nav{
     justify-content: space-between;
     align-items: center;
     height: 87px;
+}
+
+label, .bar-icon{
+    font-size: 28px;
+    display: none;
+}
+
+#nav-toggler{
+    display: none;
 }
 
 nav > .logo > h2{
@@ -88,21 +101,8 @@ nav > .navigations-manu > .cart > a > .menu-icon{
     font-size: 52px;
     font-weight: 700;
     color: #3A3A3A;
-    visibility: hidden;
-    animation: movedown 1s linear 0.4s   forwards;
 }
 
-@keyframes movedown{
-    0%{
-        transform: translateY(-130px) ;
-        visibility: visible;
-    }
-
-    100%{
-        transform: translateY(0px) scale(1.0);
-        visibility: visible;
-    }
-}
 
 .left-content p{
     font-size: 18px;
@@ -113,6 +113,20 @@ nav > .navigations-manu > .cart > a > .menu-icon{
 
 .left-content > .button{
     margin-top: 44px;
+    animation: movedown 1.6s ease-out 0.4s   forwards;
+    visibility: hidden;
+}
+
+@keyframes movedown{
+    0%{
+        transform: translatex(-500px) ;
+        visibility: visible;
+    }
+
+    100%{
+        transform: translateY(0px) scale(1.0);
+        visibility: visible;
+    }
 }
 
 .left-content > .button > a{
@@ -130,15 +144,50 @@ nav > .navigations-manu > .cart > a > .menu-icon{
 }
 
 .right-image{
-    height: 500px;
     max-width: 45%;
-    background-size:100%;
-    background-repeat: no-repeat;
-    background-image: url(./images/Circle\ design.svg);
 }
 
 .right-image img{
+    position: relative;
+    top: 20px;
+    background-size:94%;
+    background-repeat: no-repeat;
+    background-image: url(./images/Circle\ design.svg);
+    animation: up-down 2s ease-in-out infinite alternate ;
     width: 500px;
+}
+
+@keyframes up-down{
+    0% {
+        transform: translateY(0px);
+    }
+
+    100%{
+        transform: translateY(-60px);
+    }
+}
+
+.drop-down{
+    width: 500px;
+    height: 8px;
+    background-color: black;
+    border-radius: 50%;
+    filter: blur(14px);
+    position: relative;
+    opacity: 1;
+    top: 35px;
+    animation: shadow-up-down 2s ease-in-out  infinite alternate;
+
+}
+
+@keyframes shadow-up-down{
+    0%{
+        opacity: 1;
+    }
+
+    100%{
+        opacity: 0;
+    }
 }
 /* top banner section end */
 
@@ -151,7 +200,7 @@ nav > .navigations-manu > .cart > a > .menu-icon{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 110px;
+    padding: 30px 0;
     margin:100px auto;
     border-bottom: 2px solid;
     border-top: 2px solid;
@@ -164,14 +213,17 @@ nav > .navigations-manu > .cart > a > .menu-icon{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: auto;
 }
 
 .left-side img{
     width: 100px;
+    margin: 0 20px;
 }
 
 .right-side{
     width: 38%;
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -179,26 +231,348 @@ nav > .navigations-manu > .cart > a > .menu-icon{
 
 .right-side img{
     width: 100px;
+    margin: auto;
 }
+
 /* conpnay section style end */
 
 
 /* product-card style start */
+main{
+    width: 100%;
+}
+
 .product-card{
     max-width: 1047px;
-    margin: auto;
+    margin:0 auto 100px;
 }
 
 .product-card > h1{
-    font-size: 28px;
+    font-size: 32px;
     font-weight: 600;
     color: #3A3A3A;
     text-align: center;
-    margin-bottom: 30px;
+    margin:0 0 40px 0;
 }
 
 
+.cards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+}
+
+.card{
+    width: 329px;
+    min-height: 430px;
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 14px;
+    cursor: pointer;
+    margin: auto;
+    box-shadow: 0px 0px 20px rgba(122, 118, 118, 0.3);
+}
+
+.card  .product-image img{
+    width: 100%;
+}
+
+.product-info > h1{
+    margin-top: 16px;
+    font-size: 28px;
+    font-weight: 500;
+    color: #18191F;
+}
+
+.product-info > h2{
+    font-size: 24px;
+    font-weight: 400;
+    margin-top: 6px;
+    color: #000000;
+}
+
+.product-rating .star-icon{
+    display: flex;
+    align-items: center;
+}
+
+.product-rating .star-icon .field{
+    color: #FB8200;
+    margin-right: 2px;
+    font-size: 12px;
+}
+
+.product-rating .star-icon .rating-point{
+    color: #5E6366;
+    font-size: 14px;
+    font-weight: 700;
+    margin-left: 8px;
+}
+
+.product-rating > p{
+    font-size: 14px;
+    font-weight: 700;
+    color: #787885;
+}
+
+.seemore-button{
+    text-align: right;
+    margin-top: 50px;
+}
+
+.seemore-button a{
+    color: #E02C6D;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 700;
+}
 /* product-card style end */
 
 
+/* extra design style start */
+.customar-image img{
+    border-radius: 5px;
+    width: 100%;
+}
 
+.customar-info a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+}
+
+.customar-info a h1{
+    font-size: 20px;
+}
+
+.user-rating{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.user-rating > a{
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: 500;
+    color: rgb(110, 109, 109);
+}
+
+.customar-info  p{
+    margin-top: 10px;
+    font-size: 14px;
+    font-weight: 400;
+    color: rgb(77, 75, 75);
+}
+/* extra design style end */
+
+
+/* footer style start */
+footer{
+    max-width: 100%;
+    padding: 51px;
+    text-align: center;
+    background-color: #0A0826;
+}
+
+footer h2{
+    font-size: 24px;
+    color: #fff;
+    font-weight: 700;
+}
+
+footer > p{
+    color: #D9DBE1;
+    font-size: 18px;
+    margin-top:6px ;
+}
+
+footer > .social-media-icon{
+    margin-top: 17px;
+    text-align: center;
+}
+footer > .social-media-icon > a > i{
+    margin-right: 8px;
+    color: rgb(218, 214, 214);
+    font-size: 16px;
+    background-color: rgb(68, 67, 67);
+    padding: 8px;
+    border-radius: 40px;
+} 
+/* footer style end */
+
+
+
+
+
+/* mobile responsive  start*/
+
+/* tablet responsive start */
+@media (max-width:1100px){  
+
+    .left-content h1{
+        font-size: 40px;
+    }
+
+}
+
+
+@media (max-width:1056px){
+    
+    .section{
+        flex-direction: column;
+    }
+
+    .left-content{
+        max-width: 100%;
+        margin-top: 80px;
+        order: 2;
+    }
+
+    .right-image{
+        max-width: 100%;
+    }
+    
+    .cards{
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+
+    .card{
+        margin: auto;
+    }
+
+    .company{
+     flex-direction: column;
+     text-align: center;
+    }
+    
+    .left-side{
+        width: 90%;
+        justify-content: center;
+        margin-bottom: 30px;
+    }
+
+    .right-side{
+        justify-content: center;
+        width: 90%;
+    }
+
+    .left-side img{
+        margin: 0 20px;
+        width: 14%;
+    }
+
+    .right-side img{
+        width: 14%;
+        margin: 0 20px;
+    }
+
+    .seemore-button{
+        width: 80%;
+        margin: 50px auto ;
+    }
+
+}
+
+@media (max-width:1024px){
+
+    nav{
+        margin-top: 0;
+    }
+
+    label ,.bar-icon{
+        display: block;
+    }
+
+    .navigation{
+        position: absolute;
+        top: 84px;
+        width: 100%;
+        background-color: rgba(102, 95, 95, 0.8);
+        left: 0;
+        padding: 30px 0;
+        text-align: center;
+        transform: translateX(-1100px);
+        flex-direction: column;
+        transition: transform .8s ease-out;
+    }
+
+    #nav-toggler:checked ~ .navigations-manu > .navigation{
+        transform: translateX(0);
+    }
+
+    nav > .navigations-manu > .navigation > li{
+        padding-top: 30px;
+    
+    }
+
+    nav > .navigations-manu > .navigation > li > a,
+    nav > .navigations-manu > .navigation > li > a > .media-color{
+        color: white;
+    }
+
+    .right-image{
+        z-index: -1;
+    }
+
+}
+/* tablet responsive end */
+
+@media (max-width:694px){
+    
+    .right-image img{
+        margin: 0 auto;
+        max-width: 100%;
+    }
+
+    .right-image .drop-down{
+        max-width:100%;
+    }
+    
+    .left-side img{
+        /* margin:30px auto 0px ;
+        margin-left: 10px;
+        margin-right: 10px; */
+        width: 14%;
+    }
+
+    .right-side img{
+        max-width: 14%;
+        /* margin:30px auto 0px; */
+    }
+
+    .cards{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .seemore-button{
+        text-align: center;
+    }
+}
+
+@media (max-width:479px) {
+
+    nav > .logo > h2{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        font-size: 20px;
+    }
+}
+
+@media (max-width:358px) {
+    .card{
+        width: 90%;
+    }
+}
+
+@media (max-width:290px) {
+    .left-content > .button > a{
+        padding: 14px 30px;
+
+    }   
+}
+
+/* mobile responsive end*/
