--- a/styles/style.css
+++ b/styles/style.css
@@ -509,7 +509,7 @@ footer > .social-media-icon > a > i{
     }
 
     nav > .navigations-manu > .navigation > li > a,
-    nav > .navigations-manu > .navigation > li > a > .media-color{
+    nav > .navigations-manu > .navigation > li > a > .menu-icon{
         color: white;
     }
 
